<resources>
    <string name="app_name">Travel Journal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">SEARCH</string>
    <string name="verify">VERIFY</string>
    <string name="enter_the_price_of_the_trip">Enter the price of the trip</string>
    <string name="enter_the_destination_of_the_trip">Enter the destination of the trip</string>
    <string name="enter_the_name_of_the_trip">Enter the name of the trip</string>
    <string name="name">Name</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="about_us">About us</string>
    <string name="share">Share</string>
    <string name="contact">Contact</string>
    <string name="the_name_of_the_trip">The name of the trip</string>
    <string name="destination_name">Destination name</string>
    <string name="trip_type">Trip Type</string>
    <string name="city_break">City break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="approximate_price">Price approx:</string>
    <string name="rate_this_trip">Rate this trip:</string>
    <string name="add_a_url_to_set_an_image">ADD AN URL</string>
    <string name="tripid">tripId</string>
    <string name="this_application_is_a_journal_where_you_can_store_all_the_trips_you_have_been_on_or_you_would_like_to_n_n_therefore_you_can_create_your_own_trip_where_you_can_add_its_name_destination_and_price_also_you_can_select_the_period_in_which_you_have_been_gone_or_you_would_like_to_go_and_give_that_journey_a_rating_from_1_star_to_5_for_selecting_an_image_you_would_have_to_copy_an_url_from_the_internet_n_n_you_can_select_which_trips_are_your_favourite_ones_and_saving_them_into_favourite_trips">This application is a journal where you can store all the trips you have been on or you would like to.\n\n Therefore, you can create your own trip where you can add its name, destination, and price. Also, you can select the period in which you have been gone or you would like to go and give that journey a rating from 1 star to 5. For selecting an image, you would have to copy an url from the internet.\n\n You can select which trips are your favourite ones and saving them into Favourite Trips.\n\n If you do not enter an URL, or enter a wrong URL, a default image will be set.</string>
    <string name="quick_assists">QUICK ASSISTS</string>
    <string name="robert">Robert</string>
    <string name="eugen">Eugen</string>
    <string name="for_any_further_questions_don_t_hesitate_to_contact_us">For any further questions don\'t hesitate to contact us.</string>
    <string name="vasilachi38_yahoo_com">vasilachi38@yahoo.com</string>
    <string name="_0744896889">0744896889</string>
    <string name="robi_man41_yahoo_com">robi_man41@yahoo.com</string>
    <string name="_0753751632">0753751632</string>
    <string name="price">Price</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="type">Type</string>
    <string name="changethisfromsetings_yahoo_com">ChangeThisFromSetings@yahoo.com</string>
    <string name="changethisfromsettings">ChangeThisFromSettings</string>
</resources>